fix: improve styles and remove broken styles

--- a/src/components/controls/visualizer/Visualizer.css
+++ b/src/components/controls/visualizer/Visualizer.css
@@ -57,3 +57,6 @@
 .explanation {
   color: #555;
 }
+.body-svg {
+  margin-left: 10%;
+}
