--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,6 @@
   font-size: 110px;
   vertical-align: bottom;
 }
-
 .lh-container,
 .fsh-container,
 .oestro-container,
@@ -25,24 +24,6 @@
 }
 circle {
   cursor: pointer;
-}
-.increase-oestro {
-  background: #dedede;
-  padding: 10px;
-  margin-left: 5px;
-  cursor: pointer;
-}
-.increase-progest {
-  background: #dedede;
-  padding: 10px 15px;
-  cursor: pointer;
-  margin-left: 5px;
-}
-.increase-lh, .increase-fsh {
-  background: #dedede;
-  padding: 10px;
-  cursor: pointer;
-  margin-right: 5px;
 }
 .fsh-hormones {
   fill: none;
@@ -83,28 +64,28 @@ path.fsh {
   100% { opacity:1; }
 }
 .animate-lh-hormones {
-   border: 2px solid #00a3c3;
+   border-bottom: 2px solid #00a3c3;
    -webkit-animation: moreAnimation 1s infinite;
    -moz-animation: moreAnimation 1s infinite;
    -o-animation: moreAnimation 1s infinite;
     animation: moreAnimation 1s infinite;
 }
 .animate-fsh-hormones {
-   border: 2px solid #ff7a00;
+   border-bottom: 2px solid #ff7a00;
    -webkit-animation: moreAnimation 1s infinite;
    -moz-animation: moreAnimation 1s infinite;
    -o-animation: moreAnimation 1s infinite;
     animation: moreAnimation 1s infinite;
 }
 .animate-oestro-hormones {
-   border: 2px solid #3bc71f;
+   border-bottom: 2px solid #3bc71f;
    -webkit-animation: moreAnimation 1s infinite;
    -moz-animation: moreAnimation 1s infinite;
    -o-animation: moreAnimation 1s infinite;
     animation: moreAnimation 1s infinite;
 }
 .animate-progest-hormones {
-   border: 2px solid #9C27B0;
+   border-bottom: 2px solid #9C27B0;
    -webkit-animation: moreAnimation 1s infinite;
    -moz-animation: moreAnimation 1s infinite;
    -o-animation: moreAnimation 1s infinite;
